# ecfmp-plugin

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: ECFMP.cpp  ECFMP.h  Version.h.in  main.cpp  main.h
src/api/: IRestApi.h  RestApiCurl.cpp  RestApiCurl.h
src/data/: EcfmpDataProvider.cpp  EcfmpDataProvider.h  IFlowMeasureDataProvider.h
src/interfaces/: IPilotManager.h
src/managers/: PilotManager.cpp  PilotManager.h
src/types/: Filter.cpp  Filter.h  FlowMeasure.cpp  FlowMeasure.h  Measure.cpp  Measure.h  Pilot.cpp  Pilot.h
src/utils/: Date.h
tests/: CMakeLists.txt
tests/api/: EcfmpExampleJsons.h  RestApiMock.h  test_RestApiCurl.cpp
tests/data/: test_EcfmpDataProvider.cpp
tests/managers/: test_PilotManager.cpp
tests/types/: test_Filter.cpp  test_FlowMeasure.cpp  test_Measure.cpp
tests/utils/: test_Date.cpp
